--- a/.travis.yml
+++ b/.travis.yml
@@ -153,6 +153,7 @@ jobs:
         - travis_wait make test-cmd-docker-devfile-push
         - travis_wait make test-cmd-docker-devfile-url
         - travis_wait make test-cmd-docker-devfile-catalog
+        - travis_wait make test-cmd-docker-devfile-delete
 
     
     # Run devfile integration test on Kubernetes cluster    
