--- a/.travis.yml
+++ b/.travis.yml
@@ -129,7 +129,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, watch, delete, registry, exec, test, env, config, debug and log command integration tests"
+      name: "devfile catalog, create, push, watch, delete, registry, exec, test, env, status, config, debug and log command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
@@ -168,6 +168,7 @@ jobs:
     #     - make bin
     #     - sudo cp odo /usr/bin
     #     - travis_wait make test-cmd-docker-devfile-push
+    #     - travis_wait make test-cmd-docker-devfile-status
     #     - travis_wait make test-cmd-docker-devfile-watch
     #     - travis_wait make test-cmd-docker-devfile-catalog
     #     - travis_wait make test-cmd-docker-devfile-delete
@@ -178,7 +179,7 @@ jobs:
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog,url, watch, push, debug, delete, exec, test, log, storage and create command integration tests on kubernetes cluster"
+      name: "devfile catalog, url, watch, push, debug, delete, exec, test, log, status, storage and create command integration tests on kubernetes cluster"
       env:
         - MINIKUBE_WANTUPDATENOTIFICATION=false
         - MINIKUBE_WANTREPORTERRORPROMPT=false
